--- a/write_up.tex
+++ b/write_up.tex
@@ -63,6 +63,7 @@
 %\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
 %\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
 
+\usepackage{footbib}
 
 % (This matches ConTeXt defaults)
 
@@ -141,34 +142,6 @@
 \subsection{Google Maps API}{Talk about how you were gonna include it as part of IP Stream by embedding a flash object on a page, but deemed it too unethical}
 
 \part{Bibliography}
-\begin{thebibliography}{9}
-
-\bibitem{fcamdoc} Adams, A., Talvala, E., Park, S. H., Jacobs, D. E., Ajdin, B., Gelfand, N., Dolson, J., Vaquero, D., Baek, J., Tico, M., Lensch, H. P., Matusik, W., Pulli, K., Horowitz, M., and Levoy, M.
-2010. The Frankencamera: an experimental platform for computational photography.
-In ACM SIGGRAPH 2010 Papers (Los Angeles, California, July 26 - 30, 2010).
-H. Hoppe, Ed. SIGGRAPH '10. ACM, New York, NY, 1-12.
-\url{DOI= http://doi.acm.org/10.1145/1833349.1778766}
-
-\bibitem{symb1} Blookmber Business
-\url{http://www.businessweek.com/globalbiz/content/nov2009/gb2009114_367401.htm}
-
-\bibitem{gitvs} Pocoo
-\url{http://www.pocoo.org/~blackbird/github-vs-bitbucket/bitbucket.html}
-
-\bibitem{nokiasell} Lawton, Christopher (7 March 2011)
-"Nokia Sells Qt Commercial Services Business To Digia"
-\url{http://online.wsj.com/article/BT-CO-20110307-709153.html}
-
-\bibitem{libcv} Maemo Packages
-LibCV
-\url{http://maemo.org/packages/view/libcv-dev/}
-
-\bibitem{highgui-dev} Oliver Hookins, Maemo Mailing Lists
-"[Maemo-developers] False Missing Dependencies In Package View"
-\url{http://lists.maemo.org/pipermail/maemo-developers/2011-August/028583.html}
-
-
-\end{thebibliography}
 
 \part{Appendix}
 \section{API example usage}
