--- a/parts/motiondetect.tex
+++ b/parts/motiondetect.tex
@@ -1,79 +1,79 @@
-%\documentclass[11pt]{article} % use larger type; default would be 10pt
-%\usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
-%
-%%%% PAGE DIMENSIONS
-%\usepackage{geometry} % to change the page dimensions
-%\geometry{a4paper} % or letterpaper (US) or a5paper or....
-%\newcommand{\tab}{\hspace*{2em}}
-%
-%%%% PACKAGES
-%\usepackage{graphicx} % support the \includegraphics command and options
-%\usepackage{wrapfig} % Figure wrapping
-%% \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
-%\usepackage{booktabs} % for much better looking tables
-%\usepackage{array} % for better arrays (eg matrices) in maths
-%\usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
-%\usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
-%\usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
-%\usepackage{url}
-%\usepackage{enumerate}
-%\usepackage{cleveref}  %cites figures intelligently
-%\usepackage{import} % document structuring
-%\usepackage{float}  %These two ensure that table position follows text by specifying {table}[H]
-%\restylefloat{table}
-%
-%%CODE LISTINGS
-%\usepackage{color}
-%\usepackage{listings}
-%
-%\lstset{
-%	tabsize=4,
-%%	language=matlab,
-%        	basicstyle=\scriptsize,
-%%     	upquote=true,
-%       	aboveskip={\baselineskip},
-%        	columns=fixed,
-%        	showstringspaces=false,
-%        	extendedchars=true,
-%        	breaklines=true,
-%	prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-%	frame=single,
-%        	showtabs=false,
-%        	showspaces=false,
-%        	showstringspaces=false,
-%        	identifierstyle=\ttfamily,
-%        	keywordstyle=\color[rgb]{0,0,1},
-%        	commentstyle=\color[rgb]{0.133,0.545,0.133},
-%        	stringstyle=\color[rgb]{0.627,0.126,0.941},
-%	language=C++
-%}
-%
-%%%% HEADERS & FOOTERS
-%\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
-%\pagestyle{fancy} % options: empty , plain , fancy
-%\renewcommand{\headrulewidth}{0pt} % customise the layout...
-%\lhead{}\chead{}\rhead{}
-%\lfoot{}\cfoot{\thepage}\rfoot{}
-%
-%%%% SECTION TITLE APPEARANCE
-%\usepackage{sectsty}
-%\allsectionsfont{\sffamily\mdseries\upshape} % (See the fntguide.pdf for font help)
-%\usepackage{titlesec}
-%%\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
-%%\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
-%
-%\usepackage{footbib}
-%
-%% (This matches ConTeXt defaults)
-%
-%%%% ToC (table of contents) APPEARANCE
-%%\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
-%\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
-%\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
-%\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
+\documentclass[11pt]{article} % use larger type; default would be 10pt
+\usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
 
-%\begin{document}
-%%% END Article customizations
+%%% PAGE DIMENSIONS
+\usepackage{geometry} % to change the page dimensions
+\geometry{a4paper} % or letterpaper (US) or a5paper or....
+\newcommand{\tab}{\hspace*{2em}}
+
+%%% PACKAGES
+\usepackage{graphicx} % support the \includegraphics command and options
+\usepackage{wrapfig} % Figure wrapping
+% \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
+\usepackage{booktabs} % for much better looking tables
+\usepackage{array} % for better arrays (eg matrices) in maths
+\usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
+\usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
+\usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
+\usepackage{url}
+\usepackage{enumerate}
+\usepackage{cleveref}  %cites figures intelligently
+\usepackage{import} % document structuring
+\usepackage{float}  %These two ensure that table position follows text by specifying {table}[H]
+\restylefloat{table}
+
+%CODE LISTINGS
+\usepackage{color}
+\usepackage{listings}
+
+\lstset{
+	tabsize=4,
+%	language=matlab,
+        	basicstyle=\scriptsize,
+%     	upquote=true,
+       	aboveskip={\baselineskip},
+        	columns=fixed,
+        	showstringspaces=false,
+        	extendedchars=true,
+        	breaklines=true,
+	prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+	frame=single,
+        	showtabs=false,
+        	showspaces=false,
+        	showstringspaces=false,
+        	identifierstyle=\ttfamily,
+        	keywordstyle=\color[rgb]{0,0,1},
+        	commentstyle=\color[rgb]{0.133,0.545,0.133},
+        	stringstyle=\color[rgb]{0.627,0.126,0.941},
+	language=C++
+}
+
+%%% HEADERS & FOOTERS
+\usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
+\pagestyle{fancy} % options: empty , plain , fancy
+\renewcommand{\headrulewidth}{0pt} % customise the layout...
+\lhead{}\chead{}\rhead{}
+\lfoot{}\cfoot{\thepage}\rfoot{}
+
+%%% SECTION TITLE APPEARANCE
+\usepackage{sectsty}
+\allsectionsfont{\sffamily\mdseries\upshape} % (See the fntguide.pdf for font help)
+\usepackage{titlesec}
+%\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
+%\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
+
+\usepackage{footbib}
+
+% (This matches ConTeXt defaults)
+
+%%% ToC (table of contents) APPEARANCE
+%\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
+\usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
+\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
+\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
+
+\begin{document}
+%% END Article customizations
 
 
 
@@ -340,7 +340,8 @@ Using the results from this table I decided to set a threshold of less than 2600
 \\However this threshold was purely for 320x240 images. At that stage I had not considered using different image sizes  for motion detection, but since FCam supported larger sizes I decided to test thresholds for these too, expecting a linear relationship between image size and non-zero count.
 \\For this experiment I repeated the same experiment for the five different image sizes, but have only included the average counts per image size. See \ref{tab:normalised-images} in the Appendix for the complete table.\\
 
-\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
+%\import{tables/}{normalised_subtracted_image_size_SHORT.tex}
+\import{../tables/}{normalised_subtracted_image_size_SHORT.tex}
 
 The chart below in ~\cref{chart:thresholds} is based upon the data in the short table. It takes the maximum averages for each image size and plots them against the image size, with error bars as standard deviation.\\
 
@@ -747,9 +748,9 @@ Early on in the development of the app, I came across problems where the FCam dr
 
 For this reason I enabled a kernel check at the start of the Camera thread which would issue out a warning whenever a kernel different from the PR-1.3 kernel was being used. This was a simple shell call to ‘uname -r’. However the root of the problem turned out to be that I was not initializing the camera properly when I started the thread, and so when I fixed this problem, the kernelCheck function became redundant and I deleted it from the source.
 
-%\footbibliographystyle{plain}
-%\footbibliography{citers}
+\footbibliographystyle{plain}
+\footbibliography{citers}
 
 
 
-%\end{document}
+\end{document}
